Feature: Add configurable SERVER_PORT
- Updated sample.env with SERVER_PORT environment variable
- Modified docker-compose files to use dynamic port mapping
- Updated startup.sh to use SERVER_PORT
- Enhanced test_voices.sh with interactive menu and custom text generation
- Improved flexibility for port configuration across deployment scenarios

--- a/docker-compose.rocm.yml
+++ b/docker-compose.rocm.yml
@@ -7,7 +7,7 @@ services:
     image: ghcr.io/matatonic/openedai-speech-rocm
     env_file: speech.env
     ports:
-      - "8000:8000"
+      - "${SERVER_PORT:-8000}:8000"
     volumes:
       - ./voices:/app/voices
       - ./config:/app/config
