--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,10 @@
 TTS_HOME=voices
 HF_HOME=voices
+
+# Configurable server port
+# Default is 8000, but can be easily changed to avoid conflicts
+SERVER_PORT=8000
+
 #PRELOAD_MODEL=xtts
 #PRELOAD_MODEL=xtts_v2.0.2
 #EXTRA_ARGS=--log-level DEBUG --unload-timer 300
