--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,14 @@
+version: '3'
 services:
   server:
     build:
-      dockerfile: Dockerfile
-    image: ghcr.io/matatonic/openedai-speech
+      dockerfile: Dockerfile.min # piper for all models, no gpu/nvidia required, ~1GB
+    image: ghcr.io/matatonic/openedai-speech-min
     env_file: speech.env
     ports:
-      - "8000:8000"
+      - "${SERVER_PORT:-8000}:8000"
     volumes:
       - ./voices:/app/voices
       - ./config:/app/config
     # To install as a service
     restart: unless-stopped
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              #device_ids: ['0', '1'] # Select a gpu, or
-              count: all
-              capabilities: [gpu]
